# receipt-ocr-pipeline

./: .gitignore  ENV_VARS.md  LICENSE  LLM_SUPPORT.md  MANIFEST.in  PACKAGE_STRUCTURE.md  README.md  process_receipts.py  pyproject.toml  requirements.txt  rules.example.json  setup.py
receipt_ocr_pipeline/: __init__.py  __main__.py
receipt_ocr_pipeline/cli/: main.py
receipt_ocr_pipeline/core/: __init__.py  categorization.py  database.py  llm.py  models.py  ocr.py  parsers.py  processor.py  reporting.py  utils.py
